--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,10 @@ before_script:
 language: python
 python:
   - "3.6"
+  - "3.8"
 install:
   - pip install -r requirements.txt
-  - pip install codacy-coverage
 script:
   - cd decide
-  - coverage run --branch --source=. ./manage.py test --keepdb --with-xunit
-  - coverage xml
-  - python-codacy-coverage -r coverage.xml
+  - cp travis_local_settings.py local_settings.py
+  - python manage.py test authentication
